# Jobsearch_MultiAgent

./: LICENSE  README.md
AIJOBTL/: FETCH_HEAD  config  index  packed-refs
AIJOBTL/logs/: HEAD
AIJOBTL/objects/pack/: pack-d12daf08667c559f16f43e21d60d1faa285a5cf3.idx  pack-d12daf08667c559f16f43e21d60d1faa285a5cf3.pack  pack-d12daf08667c559f16f43e21d60d1faa285a5cf3.rev
AIJOBTL/refs/heads/: main
H-1B_DATA/: H1B_2020_2023_summary.csv
ai_jobproject/: README.md  pyproject.toml
ai_jobproject/src/ai_jobproject/: H1BDATA.ipynb  crew.py  main.py
ai_jobproject/src/ai_jobproject/config/: agents.yaml  tasks.yaml
